<resources>
    <string name="app_name">Remem-Birthday</string>
    <string name="edit_message">Name</string>
    <string name="button_send">Add to List</string>
    <string name="title_text">Enter Information:</string>
    <string name="date_field">Date</string>
    <string name="title_activity_list_of_days">ListOfDaysActivity</string>
    <string name="BirthdayHolder">
        "PutBirthdaysHere"
    </string>
    <string name="action_settings">Settings</string>
    <string name="added_birthdays">Added Birthdays</string>
    <string name="side_image_for_listview">Side image for ListView</string>
    <string name="nameview">nameView</string>
    <string name="dateview">dateView</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="birthday">Birthday:</string>
    <string name="all_birthdays">All Birthdays</string>
    <string name="open_lists">All Birthdays</string>
    <string name="remem_birthday">Remem-Birthday</string>
    <string name="clear_all">Clear All</string>
    <string name="go_back">Go Back</string>
    <string name="add_new">Add New</string>
    <string name="delete">Delete</string>
    <string name="x">X</string>
    <string name="tap_list_elements_for_more_information">Tap list elements for more information</string>
    <string name="go_home">Go Home</string>
    <string name="an_image_of_a_cake">An image of a cake</string>
    <string name="creator_tag">Made by: Varun Ananth (2019)</string>
    <string name="quit">Quit</string>
    <string name="tap_the_cake_to_check_upcoming_birthdays">Tap the cake to check upcoming birthdays!</string>
    <string name="e">E</string>
    <string name="tip_text">TIP: To make sure that you get notifications from this app, ensure that your phone is not on power saving mode, as this kills background processes extremely quickly and this app cannot function how it is supposed to.</string>
    <string name="upcoming_birthdays">Upcoming Birthdays</string>
    <string name="upcoming_birthdays_based_off_of_settings_so_see_more_fewer_birthdays_go_to_the_settings_tab_on_the_homescreen">Upcoming birthdays are based off of settings. To see more or fewer birthdays, go to the \"Settings\" tab on the home screen.</string>
    <string name="firstname_lastname">FIRSTNAME LASTNAME</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="days_until_birthday_00">Days until Birthday: 00</string>
    <string name="pencilimage">pencilImage</string>
    <string name="trashimage">trashImage</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="subtitlehere">SubtitleHere</string>
    <string name="titlehere">TitleHere</string>
    <string name="first_and_last_if_possible">First (and Last if possible)</string>
    <string name="add_a_name">Add a name:</string>
    <string name="edit_and_delete_individual_items_with_the_pencil_and_trash_icons_respectively">Edit and Delete individual items with the Pencil and Trash icons respectively.</string>
</resources>
