<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/textSideImage"
        android:layout_width="74dp"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:contentDescription="@string/side_image_for_listview"
        app:srcCompat="@drawable/shifted_btc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/firstname_lastname"
            android:textColor="#bc4f43"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/mm_dd_yyyy"
            android:textColor="#ca7268" />

        <TextView
            android:id="@+id/textDaysUntilView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColor="#bc4f43"
            android:text="@string/days_until_birthday_00" />
    </LinearLayout>
</LinearLayout>