<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/sideImage"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:contentDescription="@string/side_image_for_listview"
        app:srcCompat="@drawable/shifted_btc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nameView"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:textColor="#bc4f43"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateVIew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColor="#ca7268" />
    </LinearLayout>

    <ImageView
        android:id="@+id/deleteView"
        android:layout_width="153dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/pencilimage"
        android:cropToPadding="false"
        android:onClick="onEdit"
        android:padding="5dp"
        app:srcCompat="@drawable/editclip" />

    <ImageView
        android:id="@+id/trashView"
        android:layout_width="153dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/trashimage"
        android:onClick="onDelete"
        app:srcCompat="@drawable/trashclip" />


</LinearLayout>