<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <ListView
        android:id="@+id/contentList"
        android:layout_width="292dp"
        android:layout_height="424dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/all_birthdays"
        android:textColor="#bc4f43"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="253dp"
        android:layout_height="47dp"
        android:background="@drawable/button_round_shape"
        android:fontFamily="@font/montserrat"
        android:onClick="goBack"
        android:text="@string/add_new"
        android:textColor="#bc4f43"
        app:layout_constraintBottom_toTopOf="@+id/contentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintView"
        app:layout_constraintVertical_bias="0.435" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/tap_list_elements_for_more_information"
        android:textColor="#ca7268"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hintView"
        android:layout_width="277dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_vertical"
        android:text="@string/edit_and_delete_individual_items_with_the_pencil_and_trash_icons_respectively"
        android:textColor="#ca7268"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageView
        android:id="@+id/backView"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="goHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exitbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>